<resources>
    <string name="app_name">ElectronicsStore</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="my_cart">My Cart</string>
    <string name="catalogue">Catalogue</string>
    <string name="admin">Admin</string>

    <string name="sort_a_z"><![CDATA[Sort A->Z]]></string>
    <string name="sort_z_a"><![CDATA[sort Z->A]]></string>
    <string name="price_high_low"><![CDATA[Price: High->Low]]></string>
    <string name="price_low_high"><![CDATA[Price: Low->High]]></string>
    <string name="sort_by_manufacturer">Sort By Manufacturer</string>
    <string name="log_out">Log out</string>
    <string name="admin_details">Admin details</string>
    <string name="personal_admin_code">Personal Admin Code</string>
    <string name="employee_id">Employee ID</string>
    <string name="job_title">Job title</string>
    <string name="register">Register</string>
    <string name="search_by_name">search by name...</string>
    <string name="this_is_the_product_title">This is the product title</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="manufacturer_apple">Manufacturer: Apple</string>
    <string name="category_headphones">Category: Headphones</string>
    <string name="magic_keyboard_with_numeric_keypad_features_an_extended_layout_with_document_navigation_controls_for_quick_scrolling_and_full_size_arrow_keys_for_gaming_a_scissor_mechanism_beneath_each_key_allows_for_increased_stability_while_optimised_key_travel_and_a_low_profile_provide_a_comfortable_and_precise_typing_experience_the_numeric_keypad_is_also_great_for_spreadsheets_and_finance_applications_and_the_built_in_rechargeable_battery_is_incredibly_long_lasting_powering_your_keyboard_for_about_a_month_or_more_between_charges">Magic Keyboard with Numeric Keypad features an extended layout, with document navigation controls for quick scrolling and full-size arrow keys for gaming. A scissor mechanism beneath each key allows for increased stability, while optimised key travel and a low profile provide a comfortable and precise typing experience. The numeric keypad is also great for spreadsheets and finance applications. And the built-in, rechargeable battery is incredibly long-lasting, powering your keyboard for about a month or more between charges.</string>
    <string name="pound_symbol">£</string>
    <string name="all_final_prices_are_in_euros">(All final prices are in euros)</string>
    <string name="change_currency">Change currency</string>
    <string name="euro_symbol">€</string>
    <string name="quantity">Quantity: %d</string>
</resources>