<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/purchase_history_menu_option"
        android:title="Purchase History"
        android:icon="@drawable/ic_purchase_history"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort_by_name_AZ"
        android:title="@string/sort_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_name_ZA"
        android:title="@string/sort_z_a"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_price_high_low"
        android:title="@string/price_high_low"
        app:showAsAction="never" />


    <item
        android:id="@+id/sort_by_price_low_high"
        android:title="@string/price_low_high"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_manufacturer"
        android:title="@string/sort_by_manufacturer"
        app:showAsAction="never" />


    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />


</menu>