<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/bottom_sheet_item_view"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="62dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">



    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_layout_item_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="33dp"
        >

        <ImageView
            android:id="@+id/bap_sheet_item_image"
            android:layout_width="wrap_content"
            android:layout_height="340dp"
            android:src="@drawable/cpu_icon"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/bap_sheet_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apple Magic Keyboard With numeric Keypad"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/bap_sheet_manufacturer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_apple"
            android:textStyle="bold"
            android:textColor="@color/appBlue"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/bap_sheet_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_headphones"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/appBlue"
            android:layout_marginStart="20dp"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/bap_sheet_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_keyboard_with_numeric_keypad_features_an_extended_layout_with_document_navigation_controls_for_quick_scrolling_and_full_size_arrow_keys_for_gaming_a_scissor_mechanism_beneath_each_key_allows_for_increased_stability_while_optimised_key_travel_and_a_low_profile_provide_a_comfortable_and_precise_typing_experience_the_numeric_keypad_is_also_great_for_spreadsheets_and_finance_applications_and_the_built_in_rechargeable_battery_is_incredibly_long_lasting_powering_your_keyboard_for_about_a_month_or_more_between_charges"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            />



        <TextView
            android:id="@+id/bap_sheet_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price: €99.99"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/bap_change_currency_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change currency"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(All final prices are in euros)"
            android:layout_gravity="center"
            />

        <RadioGroup
            android:id="@+id/bap_currency_radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="5"
            style="@style/RadioButtonStyle"
            >

            <RadioButton android:id="@+id/radio_euro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="€"
                android:textColor="@color/black"
                android:checked="true"
            />

            <RadioButton android:id="@+id/radio_pounds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pound_symbol"
                android:textColor="@color/black"

                />

            <RadioButton android:id="@+id/radio_us_dollars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$"
                android:textColor="@color/black"

                />
            <RadioButton android:id="@+id/radio_cad_dollars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$ CAD"
                android:textColor="@color/black"

                />
            <RadioButton android:id="@+id/radio_japanese_yen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="¥"
                android:textColor="@color/black"
                />


        </RadioGroup>

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="Add to cart"
            android:background="@color/appDarkBlue"/>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout

        android:id="@+id/header_layout_item_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/appBlue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bap_sheet_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_tailless_up_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="18dp"
            android:text="Item description"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>